# sol_pool_watcher

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  cfg.example.toml
.github/workflows/: ci.yml
src/: config.rs  constants.rs  domain.rs  main.rs  notifier.rs  pipeline.rs  pool_registry.rs  pool_store.rs
src/services/: analytics.rs  message.rs  metadata.rs  mod.rs  rugcheck.rs
src/tracking/: formatter.rs  impact.rs  liquidity.rs  manager.rs  mod.rs  model.rs  rolling.rs  score.rs  tradeability.rs
src/venues/: mod.rs  stub.rs
src/venues/meteora/: damm.rs  dlmm.rs  mod.rs
src/venues/orca/: mod.rs
src/venues/pumpswap/: mod.rs
src/venues/raydium/: amm.rs  clmm.rs  cpmm.rs  mod.rs
