[package]
name = "sol_pool_listener"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
base64 = "0.22"
bs58 = "0.5"
solana-pubkey = "4.0.0"
solana-pubsub-client = "3.1.5"
solana-rpc-client = "3.1.6"
solana-rpc-client-types = "3.1.5"
anchor-lang = "0.32.1"
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-amm-v3.git", features = ["client", "no-entrypoint"] }
rusqlite = { version = "0.31", features = ["bundled"] }
